--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "dev": "vite",
     "build": "vite build"
   },
-  "dependencies": {
+  "dependencies": {   
     "vue": "^3.0.0-rc.1",
     "vue-router": "4.0.0-beta.3"
   },
   "devDependencies": {
+    "sass": "1.26.10",
     "@vue/compiler-sfc": "^3.0.0-rc.1",
     "vite": "1.0.0-rc.3"
   }
